--- a/experience/index.html
+++ b/experience/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link id="favicon" rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-png">
@@ -40,7 +42,7 @@
       <span>every experience in your life is being orchestrated to teach you something you need to know to move forward.</span>
   </div>
 
-  <div class="timeline">
+<div class="timeline">
 
     <div class="container left">
       <div class="content">
@@ -54,6 +56,7 @@
       </div>
     </div>
 
+    <a href="https://drive.google.com/file/d/1UJP96Z7WvYfjts79sz1SpqeVj1vjTx0j/view?usp=sharing" target="_blank" >
     <div class="container right">
         <div class="content">
           <div class="tag">
@@ -65,6 +68,7 @@
           </div>
         </div>
       </div>
+    </a>
 
       <div class="container left">
         <div class="content">
@@ -77,6 +81,7 @@
           </div>
         </div>
       </div>
+    
 
     <div class="container right">
       <div class="content">
@@ -90,6 +95,7 @@
       </div>
     </div>
 
+    <a href="https://drive.google.com/file/d/140kCOKAeK2kBPIyjw-AwLPWQBWufFFVQ/view?usp=sharing" target="_blank" >
     <div class="container left">
       <div class="content">
         <div class="tag">
@@ -101,6 +107,7 @@
         </div>
       </div>
     </div>
+    </a>
 
     <div class="container right">
       <div class="content">
@@ -138,6 +145,7 @@
       </div>
     </div>
 
+    <a href="https://drive.google.com/file/d/1QeKY5P2a2-YbMREyws1OrT02QYlqVdeG/view?usp=sharing" target="_blank" >
     <div class="container left">
         <div class="content">
           <div class="tag">
@@ -149,6 +157,21 @@
           </div>
         </div>
       </div>
+      </a>
+
+      <a href="https://drive.google.com/file/d/1UJwEBA1Oj5VEpogwZLaUOKpw_wPCOqHZ/view?usp=sharing" target="_blank" >
+    <div class="container right">
+        <div class="content">
+          <div class="tag">
+            <h2>Wadhwani Foundation</h2>
+          </div>
+          <div class="desc">
+              <h3>Effective Speaking and Listening Skills</h3>
+              <p>November 10, 2025</p>
+          </div>
+        </div>
+      </div>
+      </a>
 
   </div>
 
