--- a/index.html
+++ b/index.html
@@ -4,16 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="jigar sable, portfolio, jigar, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
-    <meta name="description" content="Welcome to Jigar's Portfolio. Full-Stack Web Developer and Android App Developer" />
+    <meta name="keywords" content="abdun nur, abdunnur, portfolio, nur, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
+    <meta name="google-site-verification" content="-dNWKvpo2XN65oDg0t_ilECPNYhO9VnykO2H1uq6Fco" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- SEO Starts -->
     <!-- Favicon -->
     <link id="favicon" rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-png">
-    <title>Portfolio | Abdun Nur</title>
-</head>
+    <!-- Primary Meta Tags -->
+  <title>Abdun Nur — Frontend Web Developer</title>
+  <meta name="description" content="Hi, I'm Abdun Nur. A passionate Frontend & Web Developer. I build modern, responsive and SEO-friendly websites using HTML, CSS, JavaScript, React, and Next.js.">
+  <meta name="title" content="Abdun Nur — Frontend Web Developer">
+  <link rel="canonical" href="https://abdunnur.netlify.app/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Viewport -->
+  
+  <!-- Robots (allow indexing) -->
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Abdun Nur — Frontend Web Developer">
+  <meta property="og:description" content="Passionate Frontend & Web Developer. Creating modern, fast and user-friendly websites.">
+  <meta property="og:image" content="./assets/images/profile.jpg">
+  <meta property="og:url" content="https://abdunnur.netlify.app/">
+
+<!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Abdun Nur — Frontend Web Developer">
+  <meta name="twitter:description" content="Passionate Frontend & Web Developer. Creating modern, fast and user-friendly websites.">
+  <meta name="twitter:image" content="https://abdunnur.netlify.app/">
+
+  </head>
+
+  <script type="application/ld+json">
+  {
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Abdun Nur",
+  "url": "https://abdunnur.netlify.app/",
+  "sameAs": [
+    "https://github.com/nur637788",
+    "https://www.linkedin.com/in/nur637788",
+    "https://twitter.com/nur637788"
+  ],
+  "jobTitle": "Frontend Web Developer"
+  }
+  </script>
+  <!-- SEO ENDs -->
 <body oncontextmenu="return false">
 
 <!-- pre loader -->
