add all social link

--- a/index.html
+++ b/index.html
@@ -48,13 +48,18 @@
   "url": "https://abdunnur.netlify.app/",
   "sameAs": [
     "https://github.com/nur637788",
+    "https://facebook.com/nur637788",
+    "https://instagram.com/nur637788",
     "https://www.linkedin.com/in/nur637788",
-    "https://twitter.com/nur637788"
+    "https://twitter.com/nur637788",
+    "https://abdunnur.netlify.app/",
+    "https://nurdev.netlify.app/"
   ],
   "jobTitle": "Frontend Web Developer"
   }
   </script>
   <!-- SEO ENDs -->
+
 <body oncontextmenu="return false">
 
 <!-- pre loader -->
@@ -104,7 +109,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="./assets/images/hero.jpg" alt="">
+    <img draggable="false" class="tilt" src="./assets/images/hero.jpg" alt="hero-image">
 </div>
 </section>
 <!-- hero section ends -->
@@ -117,7 +122,7 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="./assets/images/profile.jpg" alt="">
+        <img draggable="false" class="tilt" src="./assets/images/profile.jpg" alt="profile">
     </div>
     <div class="content">
         <h3>I'm Abdun Nur</h3>
@@ -181,7 +186,7 @@
 
     <div class="box">
         <div class="image">
-        <img draggable="false" src="./assets/images/educat/college.jpeg" alt="">
+        <img draggable="false" src="./assets/images/educat/college.jpeg" alt="Collage image">
         </div>
         <div class="content">
         <h3>Diploma in Engineering</h3>
@@ -192,7 +197,7 @@
 
     <div class="box">
       <div class="image">
-      <img draggable="false" src="./assets/images/educat/school.jpg" alt="Madrasha">
+      <img draggable="false" src="./assets/images/educat/school.jpg" alt="Madrasha image">
       </div>
       <div class="content">
       <h3>SSC Science </h3>
@@ -382,7 +387,7 @@
     <div class="container">
       <div class="content">
         <div class="image-box">
-          <img draggable="false" src="./assets/images/contact1.png" alt="">
+          <img draggable="false" src="./assets/images/contact1.png" alt="contact image">
         </div>
 
         <form id="contact-form">
